Exercises/My_workspace/host/.metadata/.plugins/org.eclipse.cdt.ui/exercise 5.4.build.log
13:59:55 **** Rebuild of configuration Debug for project exercise 5.4 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:18:10: error: assignment of read-only location '*ptr'
   (*ptr) = 100;
          ^

13:59:55 Build Failed. 1 errors, 0 warnings. (took 254ms)

